# NavierStokesSolver

./: CMakeLists.txt  dcavity.par  poisson.par  readme.txt  worklist.txt
src/: Array.cc  Array.hh  CMakeLists.txt  Debug.hh  FileReader.cc  FileReader.hh  FluidSimulator.cc  FluidSimulator.hh  GrayScaleImage.cc  GrayScaleImage.hh  SORSolver.cc  SORSolver.hh  StaggeredGrid.cc  StaggeredGrid.hh  VTKWriter.cc  initialisers.hh  main.cc
tests/: 3b_simulation.cc  ArrayTest.cc  CMakeLists.txt  FileReaderTest.cc  FluidSimTest.cc  ObstacleTest.cc  SORTest.cc
tests/parameterfiles/: sortest.par
